# playground

./: README.md  main.cpp  window-toolkit.qbs  wteventloop.cpp  wteventloop.h  wtwaylandwindow.cpp  wtwaylandwindow.h
blog/spring-boot-https/: README.md
blog/spring-boot-https/client/: build.gradle
blog/spring-boot-https/springhttps/: build.gradle  settings.gradle
minesweeper/: main.qml  minesweeper.js  qml.qrc
python-xml-build-script/: Build.py  ComponentsLoaderCSV.py  ComponentsLoaderXml.py  components.xml
sine-qml-graphics-scene/: main.cpp  main.qml  sine.pro  sineitem.cpp  sineitem.h
tasks/: main.cpp
ticktactoe-angular/: index.html  package.json  systemjs.config.js  tsconfig.json
ticktactoe-angular/app/: field.component.ts  field.html  gamebutton.component.ts  gamebutton.css  gamelogic.ts  main.ts  minesweeper.component.ts  minesweeper.module.ts
tictacserver/: build-hardcoded.bat  pom.xml
tictacserver/web/WEB-INF/: web.xml
torus/shaders/: main_fsh.sh
torus/torus_diffuse_light/: applicationwindow.cpp  applicationwindow.h  main.cpp
torus/torus_diffuse_light/shaders/: main_fsh.sh  main_vsh.sh
torus/torus_mesh/: applicationwindow.cpp  applicationwindow.h  shaderprogram.cpp  shaderprogram.h
torus/torus_mesh/shaders/: main_vsh.sh
torus/torus_texture/: applicationwindow.cpp  applicationwindow.h  torus.pro
torus/torus_texture/shaders/: main_fsh.sh  main_vsh.sh
turner/urlchecker/: pom.xml
urlchecker/urlchecker/: create_db.sql
urlchecker/urlchecker_python/checker_proj/: manage.py  (+1 more)
wt-wayland-backend/: README.md  cttempfile.cpp  cttempfile.h  main.cpp  window-toolkit.qbs  wteventloop.cpp  wteventloop.h  wtwaylandwindow.cpp
wt-x11-backend/: CMakeLists.txt  TODO  application-x11.cpp  application-x11.h  display-x11.cpp  display-x11.h  listview.cpp  listview.h  main.cpp  paintbrush.cpp  paintbrush.h  pushbutton.cpp  pushbutton.h  rect.cpp  rect.h  types.h  verification.cpp  verification.h  widget.cpp  widget.h  window-x11.cpp  window-x11.h  window.cpp  window.h  wt-x11-driver  wt-x11-driver.cbp  wt-x11-driver.cpp  wt-x11-driver.h  wt.cpp  wt.h  wtcolor.h  wtimage.cpp  wtimage.h  wtlabel.cpp  wtlabel.h  wttextedit.cpp
wt-x11-backend/interfaces/: window.h
(+108 files in other folders)
